# Project-MN

./: .gitignore  Backend_usage.md  build_plan.md  pitch.md
.github/ISSUE_TEMPLATE/: -bug---short-description.md
.github/workflows/: rust-ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: ai.rs  config.rs  db.rs  ingest.rs  main.rs  payment.rs  query.rs  tools.rs  vector.rs
exam-study-tool/: build_plan.md  pitch.md
reels-script-generator/: build_plan.md  pitch.md
